// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetBrand matches custom props snapshot 1`] = `
<div
  class="c-card"
>
  <div
    class="c-card-header c-content-center c-text-white c-p-0 c-bg-twitter"
  />
   
  <div
    class="c-card-body c-row c-text-center"
  >
    <div
      class="c-col"
    >
      <div
        class="c-text-value-lg"
      >
        
          rightHeader
        
      </div>
       
      <div
        class="c-text-uppercase c-text-muted c-small"
      >
        
          rightFooter
        
      </div>
    </div>
     
    <div
      class="c-vr"
    />
     
    <div
      class="c-col"
    >
      <div
        class="c-text-value-lg"
      >
        
          leftHeader
        
      </div>
       
      <div
        class="c-text-uppercase c-text-muted c-small"
      >
        
          leftFooter
        
      </div>
    </div>
  </div>
</div>
`;

exports[`CWidgetBrand matches default props snapshot 1`] = `
<div
  class="c-card"
>
  <div
    class="c-card-header c-content-center c-text-white c-p-0 c-bg-undefined"
  />
   
  <div
    class="c-card-body c-row c-text-center"
  >
    <div
      class="c-col"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="c-vr"
    />
     
    <div
      class="c-col"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
